--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "clsx": "^2.1.1",
     "crypto": "^1.0.1",
     "date-fns": "^4.1.0",
+    "lucide": "^0.525.0",
     "lucide-react": "^0.514.0",
     "mysql2": "^3.14.1",
     "next": "15.3.2",
