--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.3.1",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "yookassa-ts": "^0.1.14"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
